--- a/custom-styles.css
+++ b/custom-styles.css
@@ -2,15 +2,17 @@
 .ui-content>.ui-block-b {
 	width: 100%;
 	float: none;
+	margin: 5px;
+	border: 1px #acacac solid;
 }
 
-@media all and (min-width: 42em) {
+@media all and (min-width: 60em) {
 	.ui-content>.ui-block-a {
-		width: 66%;
+		width: 65.5%;
 		float: left;
 	}
 	.ui-content>.ui-block-b {
-		width: 33%;
+		width: 32.5%;
 		float: left;
 	}
 } 
